# agents

./: .dockerignore  .env.example  .env.test.example  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_TOOLS_SUMMARY.md  COVERAGE_REPORT.md  Dockerfile  GUIDES.md  HOT_RELOAD.md  MEMORY_FEATURE.md  MEMORY_GUIDE.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.docker.md  README.md  REMOTE_MCP.md  TESTING.md  TODO.md  VOICE_AGENTS.md  conftest.py  coverage.json  demo.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  root_coverage.json  ruff_check.txt  run_agent.py  run_voice_agent.py  slack_adapter.py  test_rag.py
.github/: CI_SETUP.md
.github/workflows/: README.md  ci.yml  claude-code-review.yml  claude-security-review.yml  claude-test.yml  database-tests.yml  deploy.yml  integration.yml  security.yml  test-local.sh  tests.yml
agent/: main.py  mcp_client.py  prompts.py
agents/: README.md  __init__.py  remote_example.py
agents/api/: README.md  __init__.py  __main__.py  claude_code_sessions.py  models.py  server.py  sessions.py  test_server.py
agents/business_advisor/: README.md  __init__.py  main.py  prompts.pi  prompts.py
agents/chatbot/: README.md  __init__.py  main.py  prompts.py
agents/code_reviewer/: __init__.py  main.py
agents/email_intake/: __init__.py  main.py  prompts.py
agents/events/: __init__.py  main.py  prompts.py
agents/notifier/: DEPLOY_CHECKLIST.md  INSTALL.md  README.md  __init__.py  example_crontab.txt  main.py
agents/pr_agent/: __init__.py  main.py  prompts.py
agents/security_researcher/: README.md  __init__.py  main.py  prompts.py
agents/task_manager/: README.md  __init__.py  main.py  prompts.py  slack_bot.py
agents/webui/: IMPLEMENTATION.md  README.md  TESTING.md  TESTS_SUMMARY.md  VERIFICATION.md  start-dev.sh
agents/webui/frontend/: .dockerignore  .env.development  .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
agents/webui/frontend/src/: App.tsx  index.css
agents/webui/frontend/src/api/: client.test.ts  client.ts  types.ts
agents/webui/frontend/src/components/: AgentSelector.tsx  AppLayout.tsx  Button.test.tsx  Button.tsx  ChatInput.tsx  ChatView.tsx  ConversationList.tsx  ConversationListItem.tsx  ConversationMenu.tsx  Dialog.tsx  Header.tsx  Input.tsx  Message.test.tsx  Message.tsx  MessageList.tsx  NewConversationDialog.tsx  Sidebar.tsx  Spinner.tsx  TokenBadge.tsx
agents/webui/frontend/src/hooks/: useDarkMode.ts
agents/webui/frontend/src/store/: appStore.ts  claudeCodeStore.ts  conversationStore.ts
agents/webui/frontend/src/test/: setup.ts
agents/webui/frontend/src/utils/: constants.ts  (+2 more)
config/: __init__.py
config/mcp_server/: __init__.py  config.py  server.py
config/mcp_server/auth/: __init__.py  oauth_handler.py  token_store.py
docs/: CLAUDE_CODE_TOOLS.md  PAPERLIB_INGESTION.md  TESTING.md  VOICE_AGENTS.md
docs/development/: TODO.md
examples/: slack_example.py  test_rag.py
mcp_server/: config.py  memory_store.py  server.py  server_http.py  token_store.py
mcp_server/auth/: oauth_handler.py  token_store.py
mcp_server/tools/: __init__.py  content_suggestions.py  memory.py  slack.py  social_media.py  web_analyzer.py  web_reader.py
nixos/: slack-adapter.nix
scripts/: README.md  __init__.py  cleanup_test_conversations.py  clear_token_cache.py  debug_mcp_handshake.py  get_mcp_token.py  mcp_auth.py  test_mcp_connection.py  test_mcp_tool.py  test_memory.py
scripts/deployment/: clear_token_cache.py  install_notifier.py  install_slack_adapter.py
scripts/mcp/: __init__.py  debug_mcp_handshake.py  get_mcp_token.py  mcp_auth.py  test_mcp_connection.py
scripts/mcp_scripts/: debug_mcp_handshake.py
scripts/oauth/: manage_tokens.py  oauth_setup.py
scripts/paperlib/: ingest_paper.py
scripts/testing/: test_claude_code_tools.py  test_mcp_tool.py  test_memory.py
shared/: README.md  __init__.py  agent_factory.py  agent_runner.py  auth_utils.py  batch_agent.py  constants.py  env_utils.py  logging_config.py  oauth_config.py  oauth_flow.py  oauth_tokens.py  prompts.py  remote_mcp_client.py  security_utils.py  task_utils.py
tests/: __init__.py  test_memory_store.py  test_oauth_handler.py  test_task_utils.py  test_token_store.py  test_web_reader.py
tests/integration/: test_api_conversations.py  test_auth_utils.py  test_memory_store.py  test_oauth_handler.py  test_token_store.py  test_web_reader.py
tests/security/: test_ssrf_protection.py
tests/unit/: test_tool_decorators.py
tests/unit/api/: __init__.py  test_api_error_paths.py
tests/unit/security/: __init__.py  test_ssrf_protection.py
(+5 files in other folders)
