[project]
name = "agents"
version = "0.1.0"
description = "Multi-agent system built with Claude and Model Context Protocol (MCP)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "mcp==1.10.1",
    "httpx>=0.27.0",
    "aiohttp>=3.11.0",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "authlib>=1.3.0",
    "cryptography>=44.0.0",
    "python-json-logger>=2.0.7",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "html2text>=2024.2.26",
    "agent-framework",
]

[tool.uv.sources]
agent-framework = { path = "../agent-framework", editable = true }

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
