[project]
name = "agents"
version = "0.1.0"
description = "Multi-agent system built with Claude and Model Context Protocol (MCP)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.23.0",  # Updated from ==1.10.1 to fix CVE-2025-66416 (DNS rebinding)
    "httpx>=0.27.0",
    "aiohttp>=3.13.3",  # Updated from >=3.11.0 to fix 8 CVEs (DoS, request smuggling)
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "authlib>=1.3.0",
    "cryptography>=44.0.0",
    "python-json-logger>=2.0.7",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "html2text>=2024.2.26",
    "agent-framework",
]

[tool.uv.sources]
agent-framework = { path = "packages/agent-framework", editable = true }
chasm = { path = "packages/chasm", editable = true }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
voice = [
    "chasm",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
    "packages/agent-framework/tests"
]

[tool.pyright]
exclude = ["tests", ".venv"]
reportCallIssue = false

[tool.bandit]
exclude_dirs = ["tests", "scripts/deployment"]
